--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,10 @@ set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
 
-source ~/.config/tmux/catppuccin_tmux.tmux.conf
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+set -g @theme_plugins 'battery'
+# source ~/.config/tmux/tokyonight_night.tmux
 
 set -g @sessionx-zoxide-mode 'on'
 
