--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 set -g @theme_plugins 'battery'
+set -g @theme_window_with_activity_style 'bold'
 # source ~/.config/tmux/tokyonight_night.tmux
 
 set -g @sessionx-zoxide-mode 'on'
