--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,25 @@
-font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 18
+# font-family = "TX-02-Trial"
+# font-family = "JetBrainsMonoNL Nerd Font Mono"
+font-family = "JetBrainsMono Nerd Font"
+#font-family = "FiraCode Nerd Font Mono"
+#font-family = "Hack Nerd Font Mono"
+#font-family = "Iosevka Nerd Font Mono"
+#font-family = "MonaspiceKR Nerd Font Mono"
+
+font-style-italic = false
+font-style = "Retina"
+font-size = 16
+
+
+#font-thicken = true
+
+# Three liens to disable ligatures
+# font-feature = "-calt"
+# font-feature = "-liga"
+# font-feature = "-dlig"
+
 theme = "tokyonight"
 title = " "
 macos-titlebar-proxy-icon = "hidden"
+macos-titlebar-style = "hidden"
 
