Add some more window detection in aerospace

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -10,12 +10,12 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xFFCBA6F7 inactive_color=0xff494d64 width=5.0'
+  'exec-and-forget borders active_color=0xFFCBA6F7 inactive_color=0xff494d64 width=5.0',
 
   # if sketchybar
   # ,'exec-and-forget sketchybar'
 ]
-  
+
 # if sketchybar
 # exec-on-workspace-change = ['/bin/bash', '-c',
 #   'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
@@ -54,12 +54,15 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 on-focus-changed = "move-mouse window-lazy-center"
 
 [workspace-to-monitor-force-assignment]
-1 = 1                            # Monitor sequence number from left to right. 1-based indexing
-2 = 'main'                       # Main monitor
-3 = 'secondary'                  # Non-main monitor in case when there are only two monitors
-4 = 'built-in'                   # Case insensitive regex substring
-5 = '^built-in retina display$'  # Case insensitive regex match
-6 = ['secondary', 'dell']        # You can specify multiple patterns. The first matching pattern will be used
+1 = 1 # Monitor sequence number from left to right. 1-based indexing
+2 = 'main' # Main monitor
+3 = 'secondary' # Non-main monitor in case when there are only two monitors
+4 = 'built-in' # Case insensitive regex substring
+5 = '^built-in retina display$' # Case insensitive regex match
+6 = [
+  'secondary',
+  'dell',
+] # You can specify multiple patterns. The first matching pattern will be used
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -70,13 +73,13 @@ on-focus-changed = "move-mouse window-lazy-center"
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
 inner.horizontal = 8
-inner.vertical =   8
-outer.left =       8
-outer.bottom =     8
+inner.vertical = 8
+outer.left = 8
+outer.bottom = 8
 # if sketchybar
 # outer.top =        43 
-outer.top =        8 
-outer.right =      8
+outer.top = 8
+outer.right = 8
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -134,6 +137,7 @@ alt-2 = 'workspace 2'
 alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
 alt-b = 'workspace B'
+alt-d = 'workspace D'
 alt-e = 'workspace E'
 alt-m = 'workspace M'
 alt-n = 'workspace N'
@@ -146,6 +150,7 @@ alt-shift-2 = 'move-node-to-workspace 2'
 alt-shift-3 = 'move-node-to-workspace 3'
 alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-b = 'move-node-to-workspace B'
+alt-shift-d = 'move-node-to-workspace D'
 alt-shift-e = 'move-node-to-workspace E'
 alt-shift-m = 'move-node-to-workspace M'
 alt-shift-n = 'move-node-to-workspace N'
@@ -165,7 +170,10 @@ alt-shift-semicolon = 'mode service'
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
 r = ['flatten-workspace-tree', 'mode main'] # reset layout
-f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
+f = [
+  'layout floating tiling',
+  'mode main',
+] # Toggle between floating and tiling layout
 backspace = ['close-all-windows-but-current', 'mode main']
 
 # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
@@ -181,5 +189,33 @@ if.app-id = 'com.github.wez.wezterm'
 run = "move-node-to-workspace T"
 
 [[on-window-detected]]
+if.app-id = 'com.mitchellh.ghostty'
+run = "move-node-to-workspace T"
+
+[[on-window-detected]]
 if.app-id = 'company.thebrowser.Browser'
 run = "move-node-to-workspace B"
+
+[[on-window-detected]]
+if.app-id = 'app.zen-browser.zen'
+run = "move-node-to-workspace B"
+
+[[on-window-detected]]
+if.app-id = 'com.spotify.client'
+run = "move-node-to-workspace 1"
+
+[[on-window-detected]]
+if.app-id = 'md.obsidian'
+run = "move-node-to-workspace N"
+
+[[on-window-detected]]
+if.app-id = 'com.jetbrains.rider'
+run = "move-node-to-workspace E"
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.teams2'
+run = "move-node-to-workspace M"
+
+[[on-window-detected]]
+if.app-id = 'com.mongodb.compass'
+run = "move-node-to-workspace D"
