--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -21,7 +21,7 @@ font-size = 18
 # font-feature = "-liga"
 # font-feature = "-dlig"
 
-theme = "tokyonight"
+theme = rose-pine
 title = " "
 macos-titlebar-proxy-icon = "hidden"
 macos-titlebar-style = "hidden"
