--- a/.config/.gitconfig
+++ b/.config/.gitconfig
@@ -18,6 +18,7 @@
 [delta]
     navigate = true    # use n and N to move between diff sections
     dark = true
+    line-numbers = true
 
 [merge]
     conflictstyle = zdiff3
