--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,12 +9,31 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disabled_color_option 'default'
+set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
 
-set -g @theme_plugins 'battery'
-set -g @theme_window_with_activity_style 'bold'
-# source ~/.config/tmux/tokyonight_night.tmux
+set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+
+set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
+set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
+set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
+set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
+
+set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
+set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
+
+set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
+
+set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
+
+# TODO: Doesnt work: set-option -gw window-status-activity-style "fg=#fffaf3,bg=#191724"
+
 
 set -g @sessionx-zoxide-mode 'on'
 
@@ -28,13 +47,11 @@ bind P pipe-pane -o "cat>>~/#W.log"\; display "Log on ~/#W.log" # Log to file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"          # Reload
 set -g focus-events on
 
-set-option -g allow-passthrough on                              # To make zen mode work in wezterm
-
 
 # -- display -------------------------------------------------------------------------------------------------
 set -g base-index 1                                             # Base index for windows
 set -g pane-base-index 1                                        # Base index for panes
-set -g monitor-activity on
+set -g monitor-activity off # TODO: Fix colors and re-enable
 set -g visual-activity off
 setw -g automatic-rename on                                     # rename window to reflect current program
 set -g renumber-windows on                                      # renumber windows when a window is closed
@@ -79,5 +96,6 @@ bind C-l send-keys 'C-l'
 
 # Needed for upterm
 set-option -ga update-environment " UPTERM_ADMIN_SOCKET"
+
 
 run '~/.tmux/plugins/tpm/tpm'                                   # Initialize TMUX plugin manager (keep bottom)
