Add lazygit to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'AngryMorrocoy/tmux-neolazygit'
 
 set -g @plugin 'rose-pine/tmux'
 set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
