--- a/.config/jesseduffield/lazygit/config.yml
+++ b/.config/jesseduffield/lazygit/config.yml
@@ -38,6 +38,6 @@ gui:
   skipDiscardChangeWarning: false
   skipStashWarning: true
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never
