Add hack for safari

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -77,7 +77,7 @@ inner.vertical = 8
 outer.left = 8
 outer.bottom = 8
 # if sketchybar
-# outer.top =        43 
+# outer.top =        43
 outer.top = 8
 outer.right = 8
 
@@ -157,7 +157,7 @@ alt-shift-m = 'move-node-to-workspace M'
 alt-shift-n = 'move-node-to-workspace N'
 alt-shift-s = 'move-node-to-workspace S'
 alt-shift-t = 'move-node-to-workspace T'
-alt-shift-r = 'move-node-to-workspace T'
+alt-shift-r = 'move-node-to-workspace R'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
@@ -166,6 +166,7 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
+
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -221,3 +222,7 @@ run = "move-node-to-workspace M"
 [[on-window-detected]]
 if.app-id = 'com.mongodb.compass'
 run = "move-node-to-workspace D"
+
+[[on-window-detected]]
+if.app-id = 'com.apple.Safari'
+run = ['layout floating', 'move-node-to-workspace 4']
