--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,30 +11,14 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'AngryMorrocoy/tmux-neolazygit'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
-set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
-set -g @rose_pine_bar_bg_disabled_color_option 'default'
-set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
-set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
-
-set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
-
-set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-
-set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-
-set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
-
-set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
-
-# TODO: Doesnt work: set-option -gw window-status-activity-style "fg=#fffaf3,bg=#191724"
-
+set -g @minimal-tmux-fg "#dcd7ba"
+set -g @minimal-tmux-bg "#2d4f67"
+set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-use-arrow true
+set -g @minimal-tmux-right-arrow ""
+set -g @minimal-tmux-left-arrow ""
 
 set -g @sessionx-zoxide-mode 'on'
 
@@ -48,6 +32,8 @@ bind P pipe-pane -o "cat>>~/#W.log"\; display "Log on ~/#W.log" # Log to file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"          # Reload
 set -g focus-events on
 
+
+bind-key b set-option status                                    # Toggle status
 
 # -- display -------------------------------------------------------------------------------------------------
 set -g base-index 1                                             # Base index for windows
