--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -21,7 +21,8 @@ font-size = 18
 # font-feature = "-liga"
 # font-feature = "-dlig"
 
-theme = rose-pine
+# theme = rose-pine
+theme = kanagawa wave
 title = " "
 macos-titlebar-proxy-icon = "hidden"
 macos-titlebar-style = "hidden"
