--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -226,3 +226,8 @@ run = "move-node-to-workspace D"
 [[on-window-detected]]
 if.app-id = 'com.apple.Safari'
 run = ['layout floating', 'move-node-to-workspace 4']
+
+[[on-window-detected]]
+if.app-id = 'com.fortinet.FortiClient'
+run = ['layout floating', 'move-node-to-workspace 4', 'workspace 4']
+
