--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -22,7 +22,7 @@ font-size = 18
 # font-feature = "-dlig"
 
 # theme = rose-pine
-theme = kanagawa wave
+theme = Kanagawa Wave
 title = " "
 macos-titlebar-proxy-icon = "hidden"
 macos-titlebar-style = "hidden"
